Cleanup and restyle

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,91 +1,52 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
-@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+// Include flat-ui colors.
+@import 'colors';
+
+* { box-sizing: border-box; }
+
+.text-left    { text-align: left;   }
+.text-right   { text-align: right;  }
+.text-center  { text-align: center; }
+.float-left   { float: left;  }
+.float-right  { float: right; }
+.float-clear  { clear: both;  }
+
 .browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
-
-body {
-  padding: 0;
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
+  background: $red1;
+  color: $white;
+  padding: 1em;
+  a {
+    color: inherit;
+    font-weight: bold;
   }
 }
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+html, body {
+  width: 100vw;
+  overflow-x: hidden;
 }
 
-.container-narrow > hr {
-  margin: 30px 0;
+
+.container {
+  width: 95%;
+  margin: 0 auto;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
-  }
+// Header, including navbar.
+header {
+  padding: 10px 5vw;
 }
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
+  .browsehappy {
+    text-align: center;
   }
 
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
+  .container {
+    width: 100%;
+    max-width: 62.5rem;
   }
 }
